Implemented JwtToken Class

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -2,4 +2,10 @@
 App.NotFound = Application Not Found
 App.Exist = Application Already Exist
 User.Exist = User Already Exist
+Token.Expired = Login Token Expired
 Auth.Forbidden = UnAuthorized
+User.Phone.Exist = User with the phone already exist
+User.Email.Exist = User with the email already exist
+User.Register.Success = User registered successfully
+Company.Not.Found = Client not profiled on our platform
+Login.Failed = Login Failed
