Implemented Customer permission

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -9,3 +9,5 @@ User.Email.Exist = User with the email already exist
 User.Register.Success = User registered successfully
 Company.Not.Found = Client not profiled on our platform
 Login.Failed = Login Failed
+Group.Not.Found = User group {0} not found
+Company.Account.Disabled = Company account profile is currently disabled
