Implemented Customer permission

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -2,7 +2,10 @@
 App.NotFound = Application Not Found
 App.Exist = Application Already Exist
 User.Exist = User Already Exist
+User.Not.Found = User Not Found
+Token.Not.Found = Token Not Found
 Token.Expired = Login Token Expired
+Token.Invalid = Invalid Token
 Auth.Forbidden = UnAuthorized
 User.Phone.Exist = User with the phone already exist
 User.Email.Exist = User with the email already exist
