Implemented Permission authorization check

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -1,12 +1,15 @@
 
 App.NotFound = Application Not Found
+App.Setup.NotFound = Application Not Yet Setup On Authorization Server
 App.Exist = Application Already Exist
 User.Exist = User Already Exist
 User.Not.Found = User Not Found
 Token.Not.Found = Token Not Found
 Token.Expired = Login Token Expired
 Token.Invalid = Invalid Token
-Auth.Forbidden = UnAuthorized
+Auth.Forbidden = Insufficient permission
+Auth.UnAuthorized = Authentication Failed
+Auth.Successful = Successfully authorized
 User.Phone.Exist = User with the phone already exist
 User.Email.Exist = User with the email already exist
 User.Register.Success = User registered successfully
@@ -14,3 +17,4 @@ Company.Not.Found = Client not profiled on our platform
 Login.Failed = Login Failed
 Group.Not.Found = User group {0} not found
 Company.Account.Disabled = Company account profile is currently disabled
+User.Account.Disabled = User account profile is currently disabled
