Implemented logout token

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -6,8 +6,10 @@ User.Exist = User Already Exist
 User.Not.Found = User Not Found
 Token.Not.Found = Token Not Found
 Token.Expired = Login Token Expired
+Refresh.Token.Expired = Refresh Token Expired
 Token.Invalid = Invalid Token
 Auth.Forbidden = Insufficient permission
+Token.Fraud = Suspected token fraud
 Auth.UnAuthorized = Authentication Failed
 Auth.Successful = Successfully authorized
 User.Phone.Exist = User with the phone already exist
