Fix compile error

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -1,5 +1,7 @@
 
 App.NotFound = Application Not Found
+Otp.Verify.Success = Otp Verified Successfully
+Otp.Verify.Fail = Invalid OTP
 App.Setup.NotFound = Application Not Yet Setup On Authorization Server
 App.Exist = Application Already Exist
 User.Exist = User Already Exist
@@ -20,3 +22,7 @@ Login.Failed = Login Failed
 Group.Not.Found = User group {0} not found
 Company.Account.Disabled = Company account profile is currently disabled
 User.Account.Disabled = User account profile is currently disabled
+email.required = Email is required
+password.required = Password is required
+email.valid = Invalid Email
+password.valid = Password must contain minimum of 8 characters with uppercase, lowercase, digit, and special characters.
