--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -1,10 +1,12 @@
 
 App.NotFound = Application Not Found
+Company.NotFound = Company Not Found
 Message.Successful = Successful
 Otp.Verify.Success = Otp Verified Successfully
 Otp.Verify.Fail = Invalid OTP
 App.Setup.NotFound = Application Not Yet Setup On Authorization Server
 App.Exist = Application Already Exist
+Company.Exist = Application Already Exist
 User.Exist = User Already Exist
 User.Not.Found = User Not Found
 Token.Not.Found = Token Not Found
@@ -23,9 +25,11 @@ Login.Failed = Login Failed
 Group.Not.Found = User group {0} not found
 Company.Account.Disabled = Company account profile is currently disabled
 User.Account.Disabled = User account profile is currently disabled
-email.required = Email is required
 password.required = Password is required
 email.valid = Invalid Email
+invalid.login = Invalid Login id
+Password.Mismatch = Current password does not match existing password
+ConfirmPassword.Mismatch = New password does not match confirm password
 password.valid = Password must contain minimum of 8 characters with uppercase, lowercase, digit, and special characters.
 email.verify.subject = Email Verification Notification
 phone.verify.subject = Phone Verification Notification
@@ -35,3 +39,11 @@ email.reset-password.subject = Reset Password Notification
 phone.reset-password.subject = Reset Password Notification
 message.phone.reset-password = Please use otp code {0} to reset your password
 message.email.reset-password = Please use otp code {0} to reset your password
+appName.required = App name is required
+appServer.required = App server is required
+appServerPort.required = App server port is required
+
+companyCode.required = Company code is required
+lang.required = Language is required
+phone.required = Phone is required
+email.required = Email is required
