Implemented Assign of Group to User feature

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -22,7 +22,10 @@ User.Email.Exist = User with the email already exist
 User.Register.Success = User registered successfully
 Company.Not.Found = Client not profiled on our platform
 Login.Failed = Login Failed
-Group.Not.Found = User group {0} not found
+Group.NotFound = User group {0} not found
+Group.Exist = Group already exist
+Group.GroupName.Required = Group name is required
+Group.Description.Required = Group description is required
 Company.Account.Disabled = Company account profile is currently disabled
 User.Account.Disabled = User account profile is currently disabled
 password.required = Password is required
