Implemented Assign of Group to User feature

--- a/src/main/resources/appmessages_en.properties
+++ b/src/main/resources/appmessages_en.properties
@@ -22,7 +22,8 @@ User.Email.Exist = User with the email already exist
 User.Register.Success = User registered successfully
 Company.Not.Found = Client not profiled on our platform
 Login.Failed = Login Failed
-Group.NotFound = User group {0} not found
+Group.NotFound = User group not found
+Application.Shutdown = Application Shutdown for Maintenance
 Group.Exist = Group already exist
 Group.GroupName.Required = Group name is required
 Group.Description.Required = Group description is required
