Fix usergroup permission assign bug

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,14 +5,17 @@ Message.Successful = Successful
 Otp.Verify.Success = Otp Verified Successfully
 Otp.Verify.Fail = Invalid OTP
 App.Setup.NotFound = Application Not Yet Setup On Authorization Server
+App.Permission.NotFound = Application Resource Not Yet Setup On Authorization Server
 App.Exist = Application Already Exist
 Company.Exist = Application Already Exist
+Server.Error = System Malfunction
 User.Exist = User Already Exist
 User.Not.Found = User Not Found
 Token.Not.Found = Token Not Found
 Token.Expired = Login Token Expired
 Refresh.Token.Expired = Refresh Token Expired
 Token.Invalid = Invalid Token
+Token.Required = Bearer Token Required
 Auth.Forbidden = Insufficient permission
 Token.Fraud = Suspected token fraud
 Auth.UnAuthorized = Authentication Failed
