Fix bug on email verification

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,10 +4,10 @@ Company.NotFound = Company Not Found
 Message.Successful = Successful
 Otp.Verify.Success = Otp Verified Successfully
 Otp.Verify.Fail = Invalid OTP
-App.Setup.NotFound = Application Not Yet Setup On Authorization Server
+App.Setup.NotFound = Client ID not Found on Authorization Server
 App.Permission.NotFound = Application Resource Not Yet Setup On Authorization Server
 App.Exist = Application Already Exist
-Company.Exist = Application Already Exist
+Company.Exist = Company Already Exist
 Server.Error = System Malfunction
 User.Exist = User Already Exist
 User.Not.Found = User Not Found
@@ -27,6 +27,7 @@ Company.Not.Found = Client not profiled on our platform
 Login.Failed = Login Failed
 Group.NotFound = User group not found
 Application.Shutdown = Application Shutdown for Maintenance
+Application.Disabled = Application profile currently disabled
 Group.Exist = Group already exist
 Group.GroupName.Required = Group name is required
 Group.Description.Required = Group description is required
